syntax = "proto3";

message AvgRequest {
    int32 number = 1;
}

message AvgResponse {
    double output = 1;
}
